<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/angel_oak" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="70dp"
        android:alpha=".96"
        android:background="@color/light_green" >

        <EditText
            android:id="@+id/searchBarEditText"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="false"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:background="@color/super_light_yellow"
            android:ems="10"
            android:hint="@string/search_bar_string"
            android:inputType="text"
            android:textSize="40sp" />

        <Button
            android:id="@+id/searchButton"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_below="@id/searchBarEditText"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:background="@color/brown"
            android:text="@string/search_text"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/tryTheseTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/searchButton"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/try_these_string"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/boatingTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tryTheseTextView"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/boating_string"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/bikeTrailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/boatingTextView"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/bike_trail_string"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/birdWatchingTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bikeTrailTextView"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/bird_watching_string"
            android:textColor="@color/black"
            android:textSize="40sp" />

    </RelativeLayout>

</RelativeLayout>